# benchmark-local

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/: default.toml  local_example.toml  quick.toml  qwen35-small.toml
evals/: mmlu_subset.toml  wikitext_sample.txt
prompts/: suite.toml
src/bench/: __init__.py  cli.py  config.py  measure.py  models.py  power.py  prompts.py  quality.py  report.py  runner.py  stats.py  store.py
src/bench/tui/: app.py
src/bench/tui/screens/: config_screen.py  results_screen.py  run_screen.py
src/bench/tui/widgets/: metric_card.py
